# fantasy-island

./: .gitignore  CLAUDE.md
.claude/commands/: backend-test.md  docker-build.md  lint.md
.github/workflows/: build-image.yml
RunpodBackend/: .env.example  =1.16.0  Dockerfile  Dockerfile.serverless  auto_rig.py  e2e_test.py  generate_images.py  generate_mesh.py  handler.py  pyproject.toml
RunpodBackend/tests/: conftest.py  glb_validator.py  test_auto_rig.py  test_generate_images.py  test_generate_mesh.py  test_glb_validator.py  test_handler.py
RunpodBackend/tests/integration/: test_auto_rig_blender.py  test_generate_images_gpu.py  test_generate_mesh_gpu.py  test_pipeline_e2e.py
context/: backend-architecture.md  project-brief.md  test-architecture.md
